--- a/SharkTracker/Pages/DeckCollection.razor
+++ b/SharkTracker/Pages/DeckCollection.razor
@@ -9,30 +9,34 @@
 <input placeholder="New Deck Code..." value="@NewDeckCode" @oninput="(e)=> NewDeckCode = e.Value.ToString()" />
 <button class="btn btn-primary @((string.IsNullOrWhiteSpace(NewDeckName) || (string.IsNullOrWhiteSpace(NewDeckCode))) ? "disabled" : "")" @onclick="@(async () => await NewDeck() )">+</button>
 
-<table class="table table-striped table-hover table-bordered">
-    <thead class="table-dark">
-    <tr>
-        <th>Name</th>
-        <th>Code</th>
-        <th>Winrate</th>
-        <th>Actions</th>
-    </tr>
-    </thead>
-    <tbody class="table-group-divider">
-        @foreach (var deck in _decks)
-        {
+<div>
+    <table class="table table-striped table-hover table-bordered">
+        <thead class="table-dark">
             <tr>
-                <td>@deck.DeckName</td>
-                <td>@deck.DeckCode</td>
-                <td>@deck.Winrate</td>
-                <td>
-                    <a class="btn btn-outline-info" href="deckDetail/{@deck.Id}"><span class="oi oi-magnifying-glass"></span></a>
-                    <button class="btn btn-outline-danger" @onclick="@(async () => await DeleteDeck(deck) )"><span class="oi oi-trash"></span></button>
-                </td>
+                <th>Name</th>
+                <th>Code</th>
+                <th>Played</th>
+                <th>Winrate</th>
+                <th>Actions</th>
             </tr>
-        }
-    </tbody>
-</table>
+        </thead>
+        <tbody class="table-group-divider">
+            @foreach (var deck in _decks)
+            {
+                <tr>
+                    <td class="col-1"><b>@deck.DeckName</b></td>
+                    <td class="col-2"><div class="text-break small">@deck.DeckCode</div></td>
+                    <td class="col-1">@(_matchups.Where(mu => mu.PlayerDeckId == deck.Id).Sum(mu => mu.TotalEncounters))</td>
+                    <td class="col-1">@(string.Format("{0:0.##}", _matchups.Where(mu => mu.PlayerDeckId == deck.Id).Average(mu => mu.Winrate))) %</td>
+                    <td class="col-3">
+                        <a class="btn btn-outline-info" href="deckDetail/{@deck.Id}"><span class="oi oi-magnifying-glass"></span></a>
+                        <button class="btn btn-outline-danger" @onclick="@(async () => await DeleteDeck(deck) )"><span class="oi oi-trash"></span></button>
+                    </td>
+                </tr>
+            }
+        </tbody>
+    </table>
+</div>
 
 
 
@@ -42,15 +46,19 @@
     //list of decks.
     private IList<Deck> _decks = new List<Deck>();
 
+    private IList<Matchup> _matchups = new List<Matchup>();
+
     public string? NewDeckName;
 
     public string? NewDeckCode;
 
     protected override async Task OnInitializedAsync()
     {
-        if (App.DeckRepo is null)
-            return;
+        if (App.DeckRepo is null || App.MatchupRepo is null) return;
+
         _decks = await App.DeckRepo.GetAll();
+        _matchups = await App.MatchupRepo.GetAll();
+
     }
 
     private async Task NewDeck()
