--- a/SharkTracker/Pages/DeckCollection.razor
+++ b/SharkTracker/Pages/DeckCollection.razor
@@ -26,8 +26,8 @@
                 <tr>
                     <td class="col-1"><b>@deck.DeckName</b></td>
                     <td class="col-2"><div class="text-break small">@deck.DeckCode</div></td>
-                    <td class="col-1">@(_matchups.Where(mu => mu.PlayerDeckId == deck.Id).Sum(mu => mu.TotalEncounters))</td>
-                    <td class="col-1">@(string.Format("{0:0.##}", _matchups.Where(mu => mu.PlayerDeckId == deck.Id).Average(mu => mu.Winrate))) %</td>
+                    <td class="col-1">@((_matchups.Any(mu => mu.PlayerDeckId == deck.Id) ? _matchups.Where(mu => mu.PlayerDeckId == deck.Id).Sum(mu => mu.TotalEncounters) : ""))</td>
+                    <td class="col-1">@((_matchups.Any(mu => mu.PlayerDeckId == deck.Id) ? string.Format("{0:0.##} %", _matchups.Where(mu => mu.PlayerDeckId == deck.Id).Average(mu => mu.Winrate)) : ""))</td>
                     <td class="col-3">
                         <a class="btn btn-outline-info" href="deckDetail/{@deck.Id}"><span class="oi oi-magnifying-glass"></span></a>
                         <button class="btn btn-outline-danger" @onclick="@(async () => await DeleteDeck(deck) )"><span class="oi oi-trash"></span></button>
