--- a/SharkTracker/Pages/DeckDetail.razor
+++ b/SharkTracker/Pages/DeckDetail.razor
@@ -15,11 +15,12 @@
 }
 else
 {
+     
     <div class="container-fluid">
         <div class="row">
-            <div class="col-10">
-                <h1>@Deck.DeckName</h1>
-                @if (Matchups is not null)
+            <div class="col-8">
+                <h1>@Deck.DeckName V@(Deck.Version)</h1>
+                @if (Matchups is not null && Matchups.Any())
                 {
                     <div class="chartDonut">
                         <ApexChart @ref="DonutRef" TItem="Matchup" Title="Match-ups" Options="_muOptions">
@@ -37,6 +38,9 @@ else
 
                 <input placeholder="New Match-Up Name..." value="@NewMuName" @oninput="(e)=> NewMuName = e.Value.ToString()" />
                 <button class="btn btn-primary @((string.IsNullOrWhiteSpace(NewMuName)) ? "disabled" : "")" @onclick="@(async () => await NewMu() )">+</button>
+                <br />
+                <input placeholder="New version deck code" value="@NewDeckCode" @oninput="(e)=> NewDeckCode = e.Value.ToString()" />
+                <button class="btn btn-primary @((string.IsNullOrWhiteSpace(NewDeckCode)) ? "disabled" : "")" @onclick="@(async () => await NewDeckVersion() )"><span class="oi oi-reload"></span></button>
                 <table class="table table-striped table-hover table-bordered">
                     <thead class="table-dark">
                         <tr>
@@ -88,7 +92,18 @@ else
             </div>
             <div class="col-2 border">
                 <h3>Deck List</h3>
-                <table class="table table-striped table-hover table-sm" style="vertical-align: middle;">
+                @*@if ((AllDeckVersions.Count() > 1))
+                {
+                    <select class="form-select" value="@SelectedVersion" @onchange="@(async (args) => await SelectedVersionChanged(args.Value))">
+                    @if (AllDeckVersions is not null && AllDeckVersions.Any()){
+                        @foreach(Deck d in AllDeckVersions)
+                    {
+                        <option value="@d.Version">V@(d.Version)</option>
+                    }
+                    }
+                </select>
+                }*@
+                <table class="table table-striped table-sm" style="vertical-align: middle;">
                     <tbody class="table-group-divider">
                         @foreach (Card c in DeckCards)
                         {
@@ -99,6 +114,7 @@ else
                                         <div class="manaCost"><b>@c.Cost</b></div>
                                     </div>
                                 </td>
+                                @*<td class="col-3"><CardTooltip ArtworkPath="@c.ArtworkPath">@c.Name</CardTooltip></td>*@
                                 <td class="col-3">@c.Name</td>
                                 <td class="col-2"><span style="color: gray;">x</span><b style="color:lightslategray;">@(Deck.Cards.First(cc => cc.CardCode == c.Code).Count)</b></td>
                             </tr>
@@ -111,12 +127,14 @@ else
 }
 
 @code {
-#nullable enable
+    #nullable enable
 
     [Parameter]
     public string? DeckId { get; set; }
 
     public Deck? Deck { get; set; }
+
+    public List<Deck> AllDeckVersions { get; set; } = new();
 
     public List<Matchup> Matchups { get; set; } = new();
 
@@ -128,6 +146,8 @@ else
 
     public List<Card> DeckCards = new();
 
+    public int SelectedVersion { get; set; }
+
     private ApexChartOptions<Matchup> _muOptions = new ApexChartOptions<Matchup>
         {
             Theme = new Theme
@@ -137,30 +157,60 @@ else
             }
         };
 
+    public string? NewDeckCode { get; set; }
+
     protected override async Task OnParametersSetAsync()
     {
-        DeckId = (DeckId is not null) ? DeckId.Replace("{", "").Replace("}", "") : "";
-        if (int.TryParse(DeckId, out int id))
+        try
         {
+            DeckId = (DeckId is not null) ? DeckId.Replace("{", "").Replace("}", "") : "";
+            if (int.TryParse(DeckId, out int id))
+            {
 
-            if (App.DeckRepo is null || App.MatchupRepo is null) return;
+                if (App.DeckRepo is null) return;
 
-            var allDecks = await App.DeckRepo.GetAll();
-            Deck = allDecks.FirstOrDefault(d => d.Id == id);
+                var alldecks = (await App.DeckRepo.GetAll());
+
+                AllDeckVersions = alldecks.Where(d => d.DeckId == id).OrderByDescending(d => d.Version).ToList();
+                Deck = AllDeckVersions.First();
+                if (Deck is null) return;
+
+                await UpdateUIForDeck();
+            }
+        }
+        catch (Exception e)
+        {
+            Console.WriteLine(e);
+            throw;
+        }
+    }
+
+    private async Task UpdateUIForDeck()
+    {
+        try
+        {
+            if (App.MatchupRepo is null) return;
 
             var allMu = await App.MatchupRepo.GetAll();
-            Matchups = allMu.FindAll(mu => mu.PlayerDeckId == id);
+            Matchups = allMu.FindAll(mu => mu.PlayerDeckId == Deck.DeckId);
 
-            if (Deck is null) return;
             List<CardCodeAndCount> cardsCount = LoRDeckEncoder.GetDeckFromCode(Deck.DeckCode);
             Deck.Cards = cardsCount;
             AllCards = await App.GetAllCards();
+            DeckCards.Clear();
             foreach (CardCodeAndCount cc in Deck.Cards)
             {
                 if (AllCards.Any(c => c.Code == cc.CardCode))
                     DeckCards.Add(AllCards.First(c => c.Code == cc.CardCode));
             }
             DeckCards = DeckCards.OrderBy(c => c.Cost).ThenBy(c => c.Name).ToList();
+
+            SelectedVersion = Deck.Version;
+            await RefreshGraphs();
+        } catch (Exception e)
+        {
+            Console.WriteLine(e);
+            throw;
         }
     }
 
@@ -179,8 +229,9 @@ else
 
         Matchup mu = new Matchup
             {
-                PlayerDeckId = Deck.Id,
-                OpponentDeckName = NewMuName
+                PlayerDeckId = Deck.DeckId,
+                OpponentDeckName = NewMuName,
+                PlayerDeckVersion = Deck.Version
             };
         var result = await App.MatchupRepo.Add(mu);
         Matchups.Add(mu);
@@ -198,7 +249,6 @@ else
         if (mu.Win < 0) mu.Win = 0;
 
         await App.MatchupRepo.Update(mu);
-
         await RefreshGraphs();
     }
 
@@ -210,7 +260,6 @@ else
         if (mu.Lose < 0) mu.Lose = 0;
 
         await App.MatchupRepo.Update(mu);
-
         await RefreshGraphs();
     }
 
@@ -220,23 +269,45 @@ else
 
         var result = await App.MatchupRepo.Delete(mu);
         if (result == ERepositoryResponse.Success)
-        {
+        {https://0.0.0.0/deckDetail/%7B1%7D
             Matchups.Remove(mu);
             await RefreshGraphs();
         }
-
     }
 
+    private async Task NewDeckVersion()
+    {
+        if (App.DeckRepo is null) return;
+        Deck newDeck = new Deck
+            {
+                DeckCode = NewDeckCode,
+                DeckName = Deck.DeckName,
+                Version = Deck.Version + 1,
+                DeckId = Deck.DeckId
+            };
 
+        await App.DeckRepo.Add(newDeck);
+        NewDeckCode = string.Empty;
+        AllDeckVersions.Add(newDeck);
+
+        Deck = newDeck;
+
+        await UpdateUIForDeck();
+    }
+
+    public async Task SelectedVersionChanged(object version)
+    {
+        int v = Convert.ToInt32(version);
+        Deck = AllDeckVersions.First(d => d.Version == v);
+        await UpdateUIForDeck();
+    }
 }
 
 <style>
     .chartDonut {
-        width: 25%;
         max-width: 30%;
         max-height: 30%;
-        height: 25%;
-        margin: 40px;
+        padding: 10px;
     }
 
 
